[gd_scene load_steps=9 format=3 uid="uid://drthg1m8xc5eh"]

[ext_resource type="Script" uid="uid://uim1eimld2py" path="res://Shmup/Actors/PlayerShip/player_ship.gd" id="1_dnh3m"]
[ext_resource type="Texture2D" uid="uid://cj37ksbqyn2sx" path="res://Shmup/Actors/PlayerShip/_art/player_ship.png" id="1_o4oq4"]
[ext_resource type="PackedScene" uid="uid://dde35rv6qbao4" path="res://Shmup/Actors/PlayerShip/Shield/Shield.tscn" id="3_a35rf"]
[ext_resource type="PackedScene" uid="uid://csdc4kco3ncf5" path="res://Common/Actors/Components/Hurtbox/Hurtbox.tscn" id="4_4rfch"]
[ext_resource type="PackedScene" uid="uid://dqrd5e3alvuxr" path="res://Common/Actors/Components/Health/Health.tscn" id="5_4rfch"]
[ext_resource type="PackedScene" uid="uid://cr1ssknh8vndm" path="res://Shmup/Actors/PlayerShip/DeathExplosion/DeathExplosion.tscn" id="6_gdeyu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dnh3m"]
radius = 8.062258

[sub_resource type="CircleShape2D" id="CircleShape2D_gdeyu"]
radius = 3.1622777

[node name="PlayerShip" type="CharacterBody2D"]
script = ExtResource("1_dnh3m")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_o4oq4")
hframes = 2
region_rect = Rect2(0, 0, 16, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dnh3m")

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="Shield" parent="." instance=ExtResource("3_a35rf")]
visible = false
autoplay = "default"
frame_progress = 0.54041725

[node name="Hurtbox" parent="." instance=ExtResource("4_4rfch")]
collision_mask = 6

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource("CircleShape2D_gdeyu")

[node name="Health" parent="." instance=ExtResource("5_4rfch")]
max_health = 5.0

[node name="DeathExplosion" parent="." instance=ExtResource("6_gdeyu")]
position = Vector2(0, -1)

[editable path="Hurtbox"]
